--- a/client/src/App.css
+++ b/client/src/App.css
@@ -97,6 +97,7 @@
   padding-bottom: 15px;
   border-color: darkgray;
   font-size: 14px;
+  color: rgb(43, 43, 43);
 }
 
 .left-section {
@@ -105,7 +106,7 @@
 }
 
 .greeting {
-  color: darkgreen;
+  /*style greeting?*/
 }
 
 
@@ -131,7 +132,7 @@
 }
 
 .logout-span {
-  color: rgb(43, 43, 43);
+  color: darkgreen;
 }
 
 .logout-span:hover {
