Add venue show page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,7 @@
 /*LOGIN PAGE*/
 
 .login-page {
-  background-image: url("https://lh3.googleusercontent.com/pw/AIL4fc_9OXejCfilFGr0Vcfsrikw38u4ZaYtCT8RPulRqobmM_2YAraSdtDGA5G_5ij5VLF38CgAyt7WvzZz2tCTew-IhkWG0FoMEHVn9Ub7LenI2iyXvYuFjfT13R8PT16Oi1tSj8vS8XMFby0gosR6eEHIsA2mQWhEpaqyT3Gq2c80DYsoRYmvkLliVYOjY1i8EPAINaKV73qZy7EJtpEjD2F3WxdgM6W4AMYFZOKk3FyZWTah1A2Vrt9Vcb4DaRGhRy375XveDE8gUk4T-Gs1nFS5dNzH1PlrOn6TwKQL5P1JTWZr6_rnOZ1L4kGaldJCqEzA-yTsmVKI3TtGkoTNIkxS5zSsjcl9pGPnRQMNpnoczA-95VeJKHIsTRVB7BjS7xoWw8y3O0Ur8VEjE507ByTKkLKY_Tfj4_A7IWhECUz-F4fRz8xhuV_60Zy-0IsnrqlUkESohsBf3eoUi3K6LZG9hvfj5VpbSr75nKkqm-sosH9uRL7H3qgTlKeg3Sj1dsHu4ox71nyQCeOoAqjRxtu9GToDRW3PVhZWkjX0KZmXv-nvHLCvDz_6ubzw_Q0Wa4XhNR2oyfEXKAxzVcZrWHzxs5fxohvMAyISyz0O-DVamrKO7HuFcWQ_sZGij8fy2B_eWOtdbjmq8qUjoNFYzZ9_ZNRn3UvU2ewSeWIbaZRU63z4vjRS1KX8fKpO59gd0vTB2787OYYGOuOuOqJJECalbr76_F7SxUP8wxMg6BbnzpW1N75S_oe0HGKHNWYeb-l7x8xNQLLxBSwhTG4keSPhven5CzWfSSXygyAKFiB6oLz0wFGaWA8EFRue2C0wDrtoGP1ito0ePVjcfYk2Oqj3rS3GoQOMsw0vsChBec-reAa_Revb17q4jgnIfA6yRDNrmca0NkUnOkW8ThEbsZnsjIY=w1320-h943-s-no?authuser=0");
+  background-color: rgb(221, 255, 170);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
