--- a/client/src/App.css
+++ b/client/src/App.css
@@ -177,7 +177,19 @@
   border: 3px solid white;
   border-radius: 50%;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-  
+}
+
+.avatar-edit {
+  position: absolute;
+  top: 60px; /* Adjust this value to control the vertical overlap */
+  left: 20px; /* Adjust this value to control the horizontal overlap */
+  width: 170px;
+  height: 175px;
+  object-fit: cover;
+  border: 3px solid white;
+  border-radius: 50%;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  opacity: 0.7;
 }
 
 .avatar-form-group {
@@ -199,5 +211,18 @@ input::file-selector-button {
 input::file-selector-button:hover {
   cursor: pointer;
   color: pink;
+}
 
+.profile-text-container {
+  padding-top: 20px;
+  margin-left: 0.75vw;
+}
+
+.info-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding-left: 10vw;
+  padding-right: 10vw;
+  border:solid;
 }
