--- a/client/src/App.css
+++ b/client/src/App.css
@@ -235,7 +235,26 @@ input::file-selector-button:hover {
   background-color: darkgreen;
   width: 70vw;
   margin: 0 auto;
+  margin-top: 10px;
+}
 
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 /*SEARCH BAR*/
