--- a/client/src/App.css
+++ b/client/src/App.css
@@ -229,14 +229,14 @@ input::file-selector-button:hover {
 
 /*NEW EVENT FORM*/
 
-.new-event-form-container {
+/* .new-event-form-container {
   border-radius: 5px;
   border: none;
   background-color: darkgreen;
   width: 70vw;
   margin: 0 auto;
   margin-top: 10px;
-}
+} */
 
 .modal {
   position: fixed;
@@ -251,11 +251,64 @@ input::file-selector-button:hover {
 }
 
 .modal-content {
+  width: 40vw;
   background-color: #fff;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
+
+.event-form-container {
+  margin: 50px auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+.event-form {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 15px;
+  margin-right: 20px;
+}
+
+.event-form form-group {
+  display: grid;
+  grid-template-columns: 100px 1fr;
+  gap: 10px;
+  align-items: center;
+}
+
+.event-form label {
+  font-weight: bold;
+}
+
+.event-form input[type="text"],
+.event-form input[type="email"],
+.event-form input[type="number"],
+.event-form input[type="datetime-local"] {
+  width: 100%;
+  padding: 8px;
+  font-size: 14px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.event-form button {
+  padding: 10px 20px;
+  background-color: darkgreen;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.event-form button:hover {
+  background-color: rgb(0, 164, 0);
+}
+
 
 /*SEARCH BAR*/
 
