--- a/client/src/App.css
+++ b/client/src/App.css
@@ -304,7 +304,7 @@ input::file-selector-button:hover {
   border-radius: 4px;
 }
 
-.form-group:last-child {
+.button-container {
   display: flex; /* Change display to flex */
   flex-wrap: wrap; /* Allow items to wrap */
   justify-content: space-between;
