Add comment method to event serializer

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -374,3 +374,29 @@ input::file-selector-button:hover {
 .search-bar button:hover {
   background-color: rgb(0, 176, 0);
 }
+
+/*MESSAGES*/
+
+.messages-section {
+  display: flex;
+  justify-content: space-between;
+  /* Other styles for the messages section container */
+}
+
+.message-container {
+  flex: 1;
+  /* Other styles for the message container */
+}
+
+.message {
+  margin: 8px;
+  padding: 12px;
+  background-color: #f0f0f0;
+  border-radius: 8px;
+  /* Other styles for the message container */
+}
+
+.message-content {
+  /* Styles for the message content (message text) */
+  /* You can customize the font, color, etc. here */
+}
