--- a/client/src/styles/ProfilePage.css
+++ b/client/src/styles/ProfilePage.css
@@ -3,7 +3,7 @@
 .profile-page-container {
     position: relative;
     max-width: 70vw;
-    height: 100vw;
+    height: auto;
     margin: 0 auto;
     overflow: hidden;
     border-left: solid 1px;
@@ -232,6 +232,7 @@
   gap: 20px;
   padding-left: 20px;
   padding-right: 20px;
+  padding-bottom: 20px;
 }
 
 .photo-item {
