--- a/client/src/styles/ProfilePage.css
+++ b/client/src/styles/ProfilePage.css
@@ -31,25 +31,6 @@
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
   }
   
-  .avatar-edit {
-    position: absolute;
-    top: 60px; /* Adjust this value to control the vertical overlap */
-    left: 20px; /* Adjust this value to control the horizontal overlap */
-    width: 170px;
-    height: 175px;
-    object-fit: cover;
-    border: 3px solid white;
-    border-radius: 50%;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-    opacity: 0.7;
-  }
-  
-  .avatar-form-group {
-    padding-top: 40px;
-    font-size: 0.7em;
-    padding-left: 20px;
-  }
-  
   input::file-selector-button {
     font-weight: bold;
     color: darkgreen;
@@ -210,6 +191,15 @@
   .bio-avatar-container-edit {
     flex: 1;
     padding-left: 30px;
+  }
+
+  .avatar-preview {
+    width: 170px;
+    height: 175px;
+    object-fit: cover;
+    border: 3px solid white;
+    border-radius: 50%;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
   }
   
   .errors {
