--- a/client/src/styles/NavBar.css
+++ b/client/src/styles/NavBar.css
@@ -13,6 +13,7 @@
     border-color: darkgray;
     font-size: 14px;
     color: rgb(43, 43, 43);
+    font-weight: bold;
   }
   
   .notification-dot {
