--- a/client/src/styles/EventShow.css
+++ b/client/src/styles/EventShow.css
@@ -33,8 +33,9 @@
     border-bottom: solid;
     border-width: 1px;
     border-color: darkgray;
-    margin-right: 200px;
+    /* margin-right: 200px; */
     padding-bottom: 10px;
+    width: 100%;
     min-width: 300px;
   }
 
@@ -63,6 +64,7 @@
     padding-bottom: 20px;
     min-width: 300px;
     padding-top: 10px;
+    width: 100%;
   }
   
   .bottom-info {
